--- a/style.css
+++ b/style.css
@@ -74,3 +74,15 @@ a{
     display: flex;
     gap:10px;
 }
+/*Header section Done!*/
+
+.content-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    padding: 2%;
+
+    color: #1f2937;
+}
